--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
 
-  p{font-size: 2.5ch;}
-  h2{font-size: 25px;}
-  ul{font-size: 15px;}
+  p{font-size: 1.5em;}
+  h2{font-size: 1em;}
+  ul{font-size: 1em;}
   button{background-color:burlywood}
-  button{font-size: 15px;}
+  button{font-size: 1em;}
 
  
   .FadeIn {
