--- a/style.css
+++ b/style.css
@@ -1,72 +1,47 @@
 
-p {
-    font-size: 1.5em;
-}
+  p{font-size: 1.5em;}
+  h2{font-size: 1em;}
+  ul{font-size: 1em;}
+  button{background-color:burlywood}
+  button{font-size: 1em;}
 
-h2 {
-    font-size: 1em;
-}
-
-ul {
-    font-size: 1em;
-}
-
-button {
-    background-color: burlywood
-}
-
-button {
-    font-size: 1em;
-}
-
-
-.FadeIn {
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-    font-size: 25px;
-    animation: fadeIn 2s;
+ 
+  .FadeIn {
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  animation: fadeIn 2s;
 
 }
 
-.FadeImage {
-    animation: fadeIn 2s;
+.FadeImage { animation: fadeIn 2s; 
 }
 
-.middle {
-    display: flex;
-    justify-content: center;
+.middle{
+  display: flex;
+  justify-content: center;
 }
+
 
 
 @keyframes fadeIn {
-    0% {
-        opacity: 0;
-    }
-    100% {
-        opacity: 1;
-    }
+  0% { opacity: 0; }
+  100% { opacity: 1; }
 }
 
-h1 {
-    text-align: center;
-}
+h1{text-align: center;}
 
 
-p {
-    text-align: center;
-}
+p{text-align: center;}
 
-img {
-    margin: 15px;
-}
+img{margin: 15px;}
 
-body {
-    background-color: rgb(177, 213, 245);
-}
+body{background-color: rgb(177, 213, 245);}
+
 
 
 .center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
+display: block;
+margin-left: auto;
+margin-right: auto;
+width: 50%;
 }
