--- a/style.css
+++ b/style.css
@@ -62,6 +62,10 @@ img {
 body {
     background-color: rgb(177, 213, 245);
 }
+.weather{
+    text-align: center;
+    font-size: 2.5em;
+}
 
 
 .center {
