modified the second page a bit more and removed the underline on the button links

--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 
 p {
     font-size: 1.5em;
+    
 }
 
 h2 {
@@ -12,11 +13,16 @@ ul {
 }
 
 button {
-    background-color: burlywood
+    background-color: burlywood;
+    
 }
 
 button {
     font-size: 1em;
+}
+a{
+    text-decoration: none;
+    
 }
 
 
